# NL2TRPCService

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/minimal-trpc-http-echo/: Dockerfile  README.md  go.mod  go.sum  main.go  trpc_go.yaml
examples/minimal-trpc-http-echo/handler/: echo_handler.go  http_handler.go
examples/minimal-trpc-http-echo/pb/: echo.pb.go  echo.trpc.go
examples/minimal-trpc-http-echo/proto/: echo.proto
examples/minimal-trpc-kafka-event/: .env.example  Dockerfile  README.md  compose.yaml  go.mod  go.sum  main.go  trpc_go.yaml
examples/minimal-trpc-mysql-user/: .env.example  Dockerfile  README.md  go.mod  go.sum  main.go  trpc_go.yaml
nl2service/: __init__.py  cli.py
nl2service/agent/: __init__.py  ambiguity.py  code_refiner.py  context_builder.py  conversation.py  events.py  main_agent.py  prompts.py  provider.py  runtime.py  session.py  spec_builder.py
nl2service/render/: renderer.py
nl2service/runtime/: __init__.py  checkpointer.py  github_worker.py
nl2service/spec/: __init__.py  defaults.py  io.py  models.py  normalize.py  validator.py
nl2service/tools/: actions_tool.py  github_tool.py  k8s_tool.py
nl2service/workflow/: __init__.py  checkpoint.py  clarify.py  conversation_graph.py  core.py  examples.py  gate.py  graph.py  runner.py  session_store.py  state.py  updates.py
nl2service/workflow/nodes/: __init__.py  (+1 more)
tests/: conftest.py  test_ci_failures.py  test_go_repair.py  test_graph_and_checkpoint.py  test_renderer.py  test_spec_and_updates.py
tests/fixtures/: failures.json
(+28 files in other folders)
